<resources>
    <string name="app_name">db</string>
    <string name="not_registred">Not Registred</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="register">register</string>
    <string name="confirm_password">confirm_password</string>
    <string name="already_registred">Already Registred</string>
    <string name="lastname">lastname</string>
    <string name="Firstname">Firstname</string>

</resources>
