<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#BF343C">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/edittext_firstname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/Firstname" />

    <EditText
        android:id="@+id/edittext_Lastname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/lastname" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password" />
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registred"/>
        <TextView
            android:id="@+id/textview_Login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/login"/>
    </LinearLayout>

</LinearLayout>